--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,19 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "logger": "^0.0.1",
     "mongoose": "^8.0.3",
+    "mongoose-schema-parser": "^0.2.6",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.2"
-  }
+    "nodemon": "^3.0.2",
+    "pino": "^8.16.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
+  },
+  "resolveJsonModule": true
 }
