--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "logger": "^0.0.1",
     "mongoose": "^8.0.3",
     "mongoose-schema-parser": "^0.2.6",
