--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
@@ -15,7 +16,9 @@
     "mongoose": "^8.0.3",
     "mongoose-schema-parser": "^0.2.6",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
+    "path": "^0.12.7",
     "pino": "^8.16.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
