--- a/server/package.json
+++ b/server/package.json
@@ -10,14 +10,18 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "logger": "^0.0.1",
+    "mailgen": "^2.0.28",
     "mongoose": "^8.0.3",
     "mongoose-schema-parser": "^0.2.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
+    "otp-generator": "^4.0.1",
     "path": "^0.12.7",
     "pino": "^8.16.2",
     "swagger-jsdoc": "^6.2.8",
