--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@material-tailwind/react": "^2.1.5",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
+    "date-fns": "^3.0.6",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
