--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "date-fns": "^3.0.6",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-calendar": "^4.7.0",
+    "react-date-picker": "^10.6.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
