chat incomplete ui done

--- a/server/package.json
+++ b/server/package.json
@@ -24,9 +24,12 @@
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
     "pino": "^8.16.2",
+    "redis": "^4.6.12",
+    "socket.io": "^4.7.4",
     "stripe": "^14.11.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1"
   },
   "resolveJsonModule": true
 }
