--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.20.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "socket.io-client": "^4.7.4",
     "use-event-callback": "^0.1.0",
     "yup": "^1.3.2"
   },
