--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.7.4",
     "use-event-callback": "^0.1.0",
+    "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
