--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.7.4",
+    "socket.io-redux": "^1.0.3",
     "use-event-callback": "^0.1.0",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
