--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.8",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.0.1",
     "@stripe/stripe-js": "^2.2.2",
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
     "formik": "^2.4.5",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-calendar": "^4.7.0",
     "react-date-picker": "^10.6.0",
