--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "google-auth-library": "^9.6.0",
     "jsonwebtoken": "^9.0.2",
     "logger": "^0.0.1",
     "mailgen": "^2.0.28",
@@ -24,6 +25,7 @@
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
     "pino": "^8.16.2",
+    "query-string": "^8.1.0",
     "redis": "^4.6.12",
     "socket.io": "^4.7.4",
     "stripe": "^14.11.0",
