--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.0.1",
     "@stripe/stripe-js": "^2.2.2",
+    "ag-charts-react": "^9.0.2",
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
     "formik": "^2.4.5",
