--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
     "formik": "^2.4.5",
+    "jspdf": "^2.5.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-calendar": "^4.7.0",
