--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^3.0.6",
     "formik": "^2.4.5",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-calendar": "^4.7.0",
@@ -28,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
