--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.8",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "@rollup/rollup-win32-x64-msvc": "^4.12.0",
     "@stripe/stripe-js": "^2.2.2",
     "ag-charts-react": "^9.0.2",
     "axios": "^1.6.2",
